# notebooklm-mcp-cli

./: .codex  .cursorindexingignore  .cursorrules  .editorconfig  .gitattributes  .gitignore  .mcp.json  .stignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  FIXES_SUMMARY.md  GEMINI.md  META.yaml  Makefile  PROJECT_PRIMER.md  README.md  RELATIONS.yaml  REVISION_HISTORY.md  ROADMAP.md  SECURITY.md  compose.yml  cookies.example.txt  fix_cli.py  pyproject.toml  requirements.txt  rules_now.md  sync-check.sh  test_fastmcp_stdio.py  version
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
00_admin/: SESSION_CONTINUITY.md  audit_exceptions.yaml
00_run/: README.md  install_refresh_schedule.sh  uninstall_refresh_schedule.sh
10_docs/: CLAUDE_MD_OPTIMIZATION_PLAYBOOK.md
20_receipts/: 2026-01-03_context_optimization.md  2026-01-10_doc_refresh_batch_5_repos.md  2026-01-10_doc_refresh_c021_completion.md  2026-01-10_doc_refresh_round1_foundation.md  2026-01-10_doc_refresh_round2a_validation.md  2026-01-10_doc_refresh_round2b_notebooklm_sync.md  2026-01-10_doc_refresh_round3_artifact_refresh.md  2026-01-12_project_primer_rollout.md  2026-01-13_quick_facts_owner_fix.md  2026-01-15_c021_notebooklm_refresh.md  2026-01-15_notebooklm_sync.md  2026-02-24_merge_deep_review_and_notebook_refresh.md  2026-02-25_close_session.md  2026-02-25_close_session_nightly_scheduler.md  2026-02-25_deep_review_modernization_hardening.md  2026-02-25_project_primer_refresh.md  (+11 more)
(+266 files in other folders)
